<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lizhi.bwie.com.jingdongcom.view.activity.DetailActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:src="@drawable/leftjiantou" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/imageView3"
            android:layout_marginLeft="63dp"
            android:layout_marginStart="63dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:gravity="center"
            android:text="@string/detail_goods"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2"
            android:src="@drawable/share" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageView3"
            android:src="@drawable/sandian" />

    </RelativeLayout>

    <com.youth.banner.Banner
        android:id="@+id/detail_banner"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/top"></com.youth.banner.Banner>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/detail_banner"
        android:padding="10dp"
        android:text="@string/ceshi"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:paddingLeft="10dp"
        android:text="@string/ceshi"
        android:textColor="@color/colorRed"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title2"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="140"
            android:textColor="@color/colorRed"
            android:textSize="24dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_weight="2"
            android:background="@drawable/bian_kuang_line"
            android:gravity="center"
            android:text="降价通知"
            android:textSize="12dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/left1"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/lianxi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_gonghuoshang"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left2"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/left1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/dianpu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_dianpu"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left3"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/left2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/selectheart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_guanzhu"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gocart"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/left3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/shopcar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_gouwuche"
                android:textSize="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/addcart"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorRed"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingTop="12dp"
            android:text="@string/detail_addcart"
            android:textColor="@color/colorWrite" />
    </RelativeLayout>
</RelativeLayout>
