<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    tools:context="lizhi.bwie.com.jingdongcom.view.fragement.HomeFragment">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartrefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffffe"
        android:orientation="vertical">

        <lizhi.bwie.com.jingdongcom.util.ObservableScrollView
            android:id="@+id/observe_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.youth.banner.Banner
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"></com.youth.banner.Banner>

                    <ImageView
                        android:id="@+id/home_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/timg" />
                    <!--横向滑动-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/home_hengxiang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                    </LinearLayout>

                    <!--京东快报-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_jingdongtuijian"
                            android:textColor="#000" />

                        <!--跑马灯-->
                        <com.sunfusheng.marqueeview.MarqueeView
                            android:id="@+id/home_paomadeng"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:singleLine="true"
                            app:mvAnimDuration="1000"
                            app:mvInterval="3000"
                            app:mvSingleLine="true"
                            app:mvTextColor="#000000"
                            app:mvTextSize="14sp" />

                        <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="2dp"
                            android:background="#000000" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="更多"
                            android:textColor="#000" />

                    </LinearLayout>
                    <!--京东秒杀-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:text="@string/home_jingdongmiaosha"
                            android:textColor="#000"
                            android:textSize="14dp" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/home_miaosha"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"></android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                    <!--为你推荐-->
                    <lizhi.bwie.com.jingdongcom.util.MyTextView
                        android:id="@+id/weinituijian"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/home_tuijiantext"
                        android:textColor="#000"
                        android:textSize="20dp" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/home_tuijian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#eee"></android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </ScrollView>
        </lizhi.bwie.com.jingdongcom.util.ObservableScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <LinearLayout
        android:id="@+id/linear_include"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">
        <!--扫一扫-->
        <LinearLayout
            android:id="@+id/saoyisao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/sao_kind" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="扫啊扫" />
        </LinearLayout>
        <!--搜索-->
        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="5"
            android:background="@drawable/sousuokuang">

            <LinearLayout
                android:id="@+id/search_background"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/shape_corner"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/change_a4"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/a_4" />

                <TextView
                    android:id="@+id/unclick_text"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:background="#fff"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="年货超级秒杀,好货低至1折"
                    android:textColor="#ccc" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/root" />
            </LinearLayout>

        </RelativeLayout>
        <!--消息-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/a9v" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

